Fix sitemap to only show currently available pages
- Add null slug filters to exclude invalid records
- Add safety checks to prevent broken URLs
- Add command documentation
- Add import script to npm scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "echo \"(lint intentionally omitted)\"",
-    "refresh:codes": "tsx scripts/update-codes.ts"
+    "refresh:codes": "tsx scripts/update-codes.ts",
+    "import:games": "tsx scripts/import-games.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
