--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.5.3",
     "@types/node": "20.11.30",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.12",
