--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@types/dompurify": "^3.0.5",
+    "@types/highlight.js": "^9.12.4",
+    "@types/jsdom": "^21.1.7",
     "cheerio": "1.0.0-rc.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "3.6.0",
+    "dompurify": "^3.2.7",
+    "highlight.js": "^11.11.1",
+    "jsdom": "^27.0.0",
     "marked": "12.0.2",
+    "marked-highlight": "^2.2.2",
     "next": "^14.2.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "3.23.8"
   },
   "devDependencies": {
