--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start",
     "lint": "echo \"(lint intentionally omitted)\"",
     "refresh:codes": "tsx scripts/update-codes.ts",
+    "refresh:expired": "tsx scripts/update-expired.ts",
     "import:games": "tsx scripts/import-games.ts"
   },
   "dependencies": {
