--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "import:games": "tsx scripts/import-games.ts"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.57.4",
+    "@headlessui/react": "^1.7.19",
+    "@hookform/resolvers": "^3.3.4",
     "@types/dompurify": "^3.0.5",
     "@types/highlight.js": "^9.12.4",
     "@types/jsdom": "^21.1.7",
+    "@uiw/react-markdown-preview": "^5.1.2",
+    "@uiw/react-md-editor": "^3.12.2",
     "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,6 +32,7 @@
     "next": "^14.2.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "zod": "3.23.8"
