--- a/package.json
+++ b/package.json
@@ -11,22 +11,18 @@
     "import:games": "tsx scripts/import-games.ts"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.57.4",
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
-    "@types/dompurify": "^3.0.5",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.57.4",
     "@types/highlight.js": "^9.12.4",
-    "@types/jsdom": "^21.1.7",
     "@uiw/react-markdown-preview": "^5.1.2",
     "@uiw/react-md-editor": "^3.12.2",
     "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "3.6.0",
-    "dompurify": "^3.2.7",
     "highlight.js": "^11.11.1",
-    "jsdom": "^27.0.0",
     "marked": "12.0.2",
     "marked-highlight": "^2.2.2",
     "next": "^14.2.32",
@@ -34,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.5.0",
+    "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.3.1",
     "zod": "3.23.8"
   },
@@ -42,6 +39,7 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.12",
+    "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "10.4.19",
     "dotenv": "^17.2.2",
     "postcss": "8.4.35",
