--- a/.github/workflows/hourly-post-online.yml
+++ b/.github/workflows/hourly-post-online.yml
@@ -2,7 +2,10 @@ name: Hourly Post Online
 
 on:
   schedule:
-    - cron: '*/75 * * * *'
+    - cron: '0 0,5,10,15,20 * * *'
+    - cron: '15 1,6,11,16,21 * * *'
+    - cron: '30 2,7,12,17,22 * * *'
+    - cron: '45 3,8,13,18,23 * * *'
   workflow_dispatch:
 
 jobs:
@@ -12,6 +15,12 @@ jobs:
     env:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_SERVICE_ROLE: ${{ secrets.SUPABASE_SERVICE_ROLE }}
+      TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
+      TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
+      TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+      TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
     steps:
       - uses: actions/checkout@v4
 
