--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.5.0",
     "sanitize-html": "^2.17.0",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^3.3.1",
     "zod": "3.23.8"
   },
