--- a/.github/workflows/daily-refresh.yml
+++ b/.github/workflows/daily-refresh.yml
@@ -33,7 +33,10 @@ jobs:
         run: npm ci
 
       - name: Refresh Roblox codes
-        run: npm run refresh:codes
+        run: |
+          SUMMARY_PATH="$RUNNER_TEMP/refresh-summary.json"
+          echo "AUTOMATION_SUMMARY_PATH=$SUMMARY_PATH" >> $GITHUB_ENV
+          AUTOMATION_SUMMARY_PATH="$SUMMARY_PATH" npm run refresh:codes
 
       - name: Send automation summary
         if: always()
@@ -45,6 +48,7 @@ jobs:
           RUN_ID: ${{ github.run_id }}
           RUN_NUMBER: ${{ github.run_number }}
           GITHUB_REPOSITORY: ${{ github.repository }}
+          AUTOMATION_SUMMARY_PATH: ${{ env.AUTOMATION_SUMMARY_PATH }}
         run: |
           END_TIME=$(date -u '+%Y-%m-%d %H:%M:%SZ')
           END_EPOCH=$(date +%s)
