--- a/.github/workflows/monthly-expired-refresh.yml
+++ b/.github/workflows/monthly-expired-refresh.yml
@@ -31,7 +31,10 @@ jobs:
         run: npm ci
 
       - name: Refresh expired codes
-        run: npm run refresh:expired
+        run: |
+          SUMMARY_PATH="$RUNNER_TEMP/expired-summary.json"
+          echo "AUTOMATION_SUMMARY_PATH=$SUMMARY_PATH" >> $GITHUB_ENV
+          AUTOMATION_SUMMARY_PATH="$SUMMARY_PATH" npm run refresh:expired
 
       - name: Send automation summary
         if: always()
@@ -43,6 +46,7 @@ jobs:
           RUN_ID: ${{ github.run_id }}
           RUN_NUMBER: ${{ github.run_number }}
           GITHUB_REPOSITORY: ${{ github.repository }}
+          AUTOMATION_SUMMARY_PATH: ${{ env.AUTOMATION_SUMMARY_PATH }}
         run: |
           END_TIME=$(date -u '+%Y-%m-%d %H:%M:%SZ')
           END_EPOCH=$(date +%s)
