--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "refresh:codes": "tsx scripts/update-codes.ts",
     "refresh:expired": "tsx scripts/update-expired.ts",
     "import:games": "tsx scripts/import-games.ts",
+    "post:codes": "tsx scripts/post-codes.ts",
     "post:online": "tsx scripts/post-online.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/supabase-js": "^2.58.0",
     "@types/highlight.js": "^9.12.4",
     "@uiw/react-markdown-preview": "^5.1.2",
     "@uiw/react-md-editor": "^3.12.2",
@@ -23,16 +24,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "3.6.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "highlight.js": "^11.11.1",
     "marked": "12.0.2",
     "marked-highlight": "^2.2.2",
     "next": "^14.2.32",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.5.0",
     "sanitize-html": "^2.17.0",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^3.3.1",
     "zod": "3.23.8"
   },
@@ -43,10 +47,10 @@
     "@types/react-dom": "18.2.12",
     "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "10.4.19",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.7",
-    "tsx": "^4.16.2",
+    "tsx": "^4.20.6",
     "typescript": "5.5.4"
   }
 }
