--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
+    "@mozilla/readability": "^0.6.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.58.0",
     "@types/highlight.js": "^9.12.4",
@@ -28,6 +29,7 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "highlight.js": "^11.11.1",
+    "jsdom": "^27.0.0",
     "marked": "12.0.2",
     "marked-highlight": "^2.2.2",
     "next": "^14.2.32",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.5.3",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "20.11.30",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.12",
