--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "import:games": "tsx scripts/import-games.ts",
     "post:codes": "tsx scripts/post-codes.ts",
     "post:online": "tsx scripts/post-online.ts",
-    "generate": "tsx scripts/generate-game-article.ts"
+    "generate": "tsx scripts/generate-game-article.ts",
+    "generate:queue": "tsx scripts/run-generation-queue.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
