update package.json and generate-game-article script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "post:codes": "tsx scripts/post-codes.ts",
     "post:online": "tsx scripts/post-online.ts",
     "generate": "tsx scripts/generate-game-article.ts",
-    "generate:queue": "tsx scripts/run-generation-queue.ts"
+    "generate:queue": "tsx scripts/run-generation-queue.ts",
+    "backfill:categories": "tsx scripts/backfill-game-categories.ts" 
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
