--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "generate": "tsx scripts/generate-game-article.ts",
     "generate:queue": "tsx scripts/run-generation-queue.ts",
     "backfill:categories": "tsx scripts/backfill-game-categories.ts",
-    "cover:backfill": "tsx scripts/backfill-missing-cover-images.ts"
+    "cover:backfill": "tsx scripts/backfill-missing-cover-images.ts",
+    "genres:update": "tsx scripts/update-roblox-genres.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
