--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^14.2.32",
     "node-fetch": "^3.3.2",
     "openai": "^6.1.0",
+    "playwright": "^1.56.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.0",
