--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "generate": "tsx scripts/generate-game-article.ts",
     "generate:queue": "tsx scripts/run-generation-queue.ts",
     "backfill:categories": "tsx scripts/backfill-game-categories.ts",
+    "links:backfill": "tsx scripts/backfill-social-links.ts",
+    "linktext:generate": "tsx scripts/backfill-linktext.ts",
     "cover:backfill": "tsx scripts/backfill-missing-cover-images.ts",
     "genres:update": "tsx scripts/update-roblox-genres.ts"
   },
