--- a/.github/workflows/articles-queue.yml
+++ b/.github/workflows/articles-queue.yml
@@ -1,17 +1,12 @@
-name: Queue Article Generation
+name: Run Article Generation Queue
 
 on:
   schedule:
-    - cron: "0 0,8,16 * * *"
+    - cron: "0 0,3,6,9,12,15,18 * * *"
   workflow_dispatch:
-    inputs:
-      limit:
-        description: "Number of games to process"
-        required: false
-        default: "1"
 
 jobs:
-  run-queue:
+  run-articles-queue:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     env:
@@ -29,12 +24,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run generation queue
-        run: |
-          LIMIT=${{ github.event.inputs.limit || 1 }}
-          npm run generate:queue -- --limit=$LIMIT
+      - name: Run article queue
+        run: npm run articles:queue
