--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "linktext:generate": "tsx scripts/backfill-linktext.ts",
     "cover:backfill": "tsx scripts/backfill-missing-cover-images.ts",
     "genres:update": "tsx scripts/update-roblox-genres.ts",
-    "collect:universes": "tsx scripts/collect-roblox-universes.ts"
+    "collect:universes": "tsx scripts/collect-roblox-universes.ts",
+    "enrich:universes": "tsx scripts/enrich-roblox-universes.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
