--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "post:codes": "tsx scripts/post-codes.ts",
     "post:online": "tsx scripts/post-online.ts",
     "generate": "tsx scripts/generate-game-article.ts",
+    "backfill:universes": "tsx scripts/backfill-game-universes.ts",
     "generate:queue": "tsx scripts/run-generation-queue.ts",
     "backfill:categories": "tsx scripts/backfill-game-categories.ts",
     "links:backfill": "tsx scripts/backfill-social-links.ts",
