--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate:article": "tsx scripts/generate-article.ts",
     "articles:queue": "tsx scripts/run-article-generation-queue.ts",
     "refresh:codes": "tsx scripts/update-codes.ts",
+    "rewrite:codes": "tsx scripts/rewrite-codes-articles.ts",
     "import:games": "tsx scripts/import-games.ts",
     "post:codes": "tsx scripts/post-codes.ts",
     "post:online": "tsx scripts/post-online.ts",
