--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "framework": "nextjs",
-  "installCommand": "npm install",
-  "buildCommand": "npm run build",
   "functions": {
-    "api/**": {
+    "api/**/*.{js,ts}": {
+      "runtime": "nodejs20.x",
+      "maxDuration": 60,
+      "memory": 1024
+    },
+    "app/**/route.{js,ts}": {
       "runtime": "nodejs20.x",
       "maxDuration": 60,
       "memory": 1024
