--- a/.github/workflows/update-playing-and-lists.yml
+++ b/.github/workflows/update-playing-and-lists.yml
@@ -3,7 +3,7 @@ name: Update Playing and Refresh Lists
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "0 0 31 2 *" # nonexistent date to keep schedule effectively disabled
+    - cron: "0 3 * * *" # daily at 03:00 UTC
 
 concurrency:
   group: update-playing-and-lists
