--- a/.github/workflows/enrich-and-lists.yml
+++ b/.github/workflows/enrich-and-lists.yml
@@ -27,6 +27,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Collect universes
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE: ${{ secrets.SUPABASE_SERVICE_ROLE }}
+        run: npm run collect:universes
+
       - name: Enrich universes
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
