--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "update:stats": "tsx scripts/update-universe-stats.ts",
     "generate:universe-description": "tsx scripts/generate-universe-description.ts",
     "post:vibes": "tsx scripts/post-roblox-vibes.ts",
-    "backfill:interlinking": "tsx scripts/backfill-interlinking.ts"
+    "backfill:interlinking": "tsx scripts/backfill-interlinking.ts",
+    "seed:trending-lists": "tsx scripts/seed-trending-lists.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
