--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "echo \"(lint intentionally omitted)\"",
+    "test": "vitest run",
     "generate:articles": "tsx scripts/generate-articles.ts",
     "articles:queue": "tsx scripts/run-article-generation-queue.ts",
     "refresh:codes": "tsx scripts/update-codes.ts",
@@ -77,6 +78,7 @@
     "postcss": "8.4.35",
     "tailwindcss": "3.4.7",
     "tsx": "^4.20.6",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vitest": "^4.0.16"
   }
 }
