--- a/.github/workflows/generate-event-guides.yml
+++ b/.github/workflows/generate-event-guides.yml
@@ -1,12 +1,11 @@
 name: Generate Event Guides
 
 on:
-  schedule:
-    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
   generate-event-guides:
+    if: ${{ false }} # Disabled: prevent any runs until re-enabled.
     runs-on: ubuntu-latest
     timeout-minutes: 90
     env:
