--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "collect:universes": "tsx scripts/collect-roblox-universes.ts",
     "collect:music-ids": "tsx scripts/collect-roblox-music-ids.ts",
     "collect:virtual-events": "tsx scripts/collect-roblox-virtual-events.ts",
+    "collect:catalog-items": "tsx scripts/collect-roblox-catalog-items.ts",
     "queue:event-guides": "tsx scripts/queue-event-guides.ts",
     "enrich:universes": "tsx scripts/enrich-roblox-universes.ts",
+    "enrich:catalog-items": "tsx scripts/enrich-roblox-catalog-items.ts",
     "scrape:grow-garden-crops": "tsx scripts/scrape-grow-a-garden-crops.ts",
     "lists:refresh": "tsx scripts/refresh-game-lists.ts",
     "update:playing": "tsx scripts/update-universe-playing.ts",
