--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "cover:backfill": "tsx scripts/backfill-missing-cover-images.ts",
     "collect:universes": "tsx scripts/collect-roblox-universes.ts",
     "collect:music-ids": "tsx scripts/collect-roblox-music-ids.ts",
+    "collect:music-ids-curated": "tsx scripts/collect-curated-roblox-music-ids.ts",
+    "import:music-id-seeds": "tsx scripts/import-roblox-music-id-seeds.ts",
+    "enrich:music-ids": "tsx scripts/enrich-roblox-music-ids.ts",
+    "thumbnails:music-ids": "tsx scripts/backfill-roblox-music-thumbnails.ts",
+    "verify:music-ids": "tsx scripts/verify-roblox-music-ids.ts",
     "collect:virtual-events": "tsx scripts/collect-roblox-virtual-events.ts",
     "collect:catalog-items": "tsx scripts/collect-roblox-catalog-items.ts",
     "queue:event-guides": "tsx scripts/queue-event-guides.ts",
