--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/react-dom": "18.2.12",
     "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "10.4.19",
+    "baseline-browser-mapping": "^2.9.11",
     "dotenv": "^17.2.3",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.7",
