--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
 NEXT_PUBLIC_GOOGLE_ADSENSE_CLIENT_ID=
+
+# ==== Revalidation (optional but required for on-demand refresh) ====
+REVALIDATE_ENDPOINT=
+REVALIDATE_SECRET=
