--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "ads:update": "tsx scripts/update-ads-txt.ts",
     "prebuild": "npm run ads:update",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "echo \"(lint intentionally omitted)\"",
     "test": "vitest run",
