--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,19 @@
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE=
-ALLOWED_SIGNIN_EMAIL=
+AUTH_SESSION_SECRET=
+# Set to 0 for effectively permanent login (until logout/revocation).
+AUTH_SESSION_TTL_SECONDS=604800
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
 NEXT_PUBLIC_GOOGLE_ADSENSE_CLIENT_ID=
 
-# Roblox OAuth (for linking)
+# Roblox OAuth (login)
 ROBLOX_OAUTH_CLIENT_ID=
 ROBLOX_OAUTH_CLIENT_SECRET=
+# Optional: force exact callback used by Roblox-only login flow.
+# Example: https://bloxodes.com/auth/roblox/callback/login
+ROBLOX_OAUTH_LOGIN_REDIRECT_URI=
 
 # ==== Revalidation (optional but required for on-demand refresh) ====
 REVALIDATE_ENDPOINT=
