--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ ROBLOX_OAUTH_CLIENT_ID=
 ROBLOX_OAUTH_CLIENT_SECRET=
 # Optional: force exact callback used by Roblox-only login flow.
 # Example: https://bloxodes.com/auth/roblox/callback/login
+# Legacy-compatible: https://bloxodes.com/auth/roblox/callback
 ROBLOX_OAUTH_LOGIN_REDIRECT_URI=
 
 # ==== Revalidation (optional but required for on-demand refresh) ====
