--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,22 @@ ROBLOX_OAUTH_LOGIN_REDIRECT_URI=
 # ==== Revalidation (optional but required for on-demand refresh) ====
 REVALIDATE_ENDPOINT=
 REVALIDATE_SECRET=
+
+# ==== IndexNow (optional but recommended for faster indexing) ====
+# Optional; defaults to https://bloxodes.com if omitted.
+SITE_URL=
+INDEXNOW_ENABLED=true
+INDEXNOW_KEY=
+# Example: https://bloxodes.com/<INDEXNOW_KEY>.txt
+INDEXNOW_KEY_LOCATION=
+# Optional override; defaults to https://api.indexnow.org/indexnow
+INDEXNOW_ENDPOINT=
+
+# ==== IndexNow bootstrap script (one-time bulk submission) ====
+# Optional override; defaults to <SITE_URL>/sitemap.xml
+INDEXNOW_BOOTSTRAP_SITEMAP_URL=
+# Optional controls
+INDEXNOW_BATCH_SIZE=1000
+INDEXNOW_MAX_SITEMAPS=200
+INDEXNOW_REQUEST_DELAY_MS=0
+INDEXNOW_DRY_RUN=false
