--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "ads:update": "tsx scripts/update-ads-txt.ts",
+    "indexnow:bootstrap": "tsx scripts/indexnow-bootstrap.ts",
     "prebuild": "npm run ads:update",
     "build": "next build --webpack",
     "start": "next start",
