--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^15.5.3",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "20.11.30",
+    "@types/node": "^20.19.33",
     "@types/nprogress": "^0.2.3",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.12",
